--- a/Kuh/app/src/main/res/layout/activity_main.xml
+++ b/Kuh/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
         android:id="@+id/Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="sendMessage"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
