--- a/KuhleKuh/app/src/main/res/layout/activity_main.xml
+++ b/KuhleKuh/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="145dp"
         android:layout_height="56dp"
         android:background="@drawable/cusomborder1"
-        android:hint="select Date"
+        android:hint="select DateIO"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
