--- a/KuhleKuh/app/src/main/res/layout/activity_main.xml
+++ b/KuhleKuh/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +25,7 @@
         android:layout_width="145dp"
         android:layout_height="56dp"
         android:background="@drawable/cusomborder1"
-        android:hint="select DateIO"
+        android:hint="select Date"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,16 +68,15 @@
         android:layout_width="294dp"
         android:layout_height="75dp"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:inputType="textPersonName"
         android:text="Tierbehandlung"
         android:textColor="#000000"
         android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteY="-15dp" />
 
     <Button
         android:id="@+id/Save"
@@ -98,6 +98,7 @@
         android:text="Nummer Ohrmarke:"
         android:textColor="#000000"
         android:textSize="25dp"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/Kuhnummer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.003"
