--- a/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
+++ b/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
@@ -10,6 +10,6 @@
         android:id="@+id/simpleTableLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:stretchColumns="1"> <!-- stretch the second column of the layout-->
+        android:stretchColumns="1">
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
