--- a/KuhleKuh/app/src/main/res/layout/activity_main.xml
+++ b/KuhleKuh/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,12 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/fragment_notifications"/>
     
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_kuh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
