--- a/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
+++ b/KuhleKuh/app/src/main/res/layout/fragment_notifications.xml
@@ -34,7 +34,7 @@
             android:layout_alignParentStart="true"
             android:ellipsize="end"/>
         <TextView
-            android:id="@+id/text_view_description"
+            android:id="@+id/text_view_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_ohrmarke"
