--- a/KuhleKuh/app/src/main/res/layout/activity_add_kuh.xml
+++ b/KuhleKuh/app/src/main/res/layout/activity_add_kuh.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddEditKuhActivity">
+    tools:context=".AddKuhActivity">
 
     <EditText
         android:id="@+id/number_ohrmarke"
